[gd_scene load_steps=3 format=2]

[ext_resource path="res://camera/camera_controller.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[node name="CameraController" type="Area2D"]
process_priority = -1
collision_layer = 0
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="area_entered"]
[connection signal="area_exited" from="." to="." method="area_exited"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
